--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,9 @@
 name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub Actions
 on: [push]
+
 jobs:
+  # --- JOB 1: Chạy trên GitHub Hosted Runner ---
   check-bats-version:
     runs-on: ubuntu-latest
     steps:
@@ -11,3 +13,13 @@ jobs:
           node-version: '20'
       - run: npm install -g bats
       - run: bats -v
+
+  # --- JOB 2: Chạy trên K8s Self-Hosted Runner ---
+  build:
+    # ✅ Dòng này đã đúng để chọn runner K8s của bạn
+    runs-on: [self-hosted, linux, example-runnerdeploy] 
+    
+    steps:
+      - uses: actions/checkout@v4
+      - name: Runner check
+        run: echo "Successfully ran on the custom K8s runner!"
